--- a/src/FantasyFootball.Maui/AppShell.xaml
+++ b/src/FantasyFootball.Maui/AppShell.xaml
@@ -12,18 +12,21 @@
       ContentTemplate="{DataTemplate views:CompetitionsPage}"
       Icon="cup"
       Route="CompetitionsPage" />
-    <Tab Title="{xct:Translate Stats}" Icon="{x:StaticResource StatsIcon}" Route="stats">
+    <Tab Title="Play" Icon="{x:StaticResource SoccerIcon}">
+      <ShellContent Title="{xct:Translate Games}" ContentTemplate="{DataTemplate views:GamesPage}" Route="GamesPage" />
+      <ShellContent Title="{xct:Translate Standings}" ContentTemplate="{DataTemplate views:StandingsPage}" Route="StandingsPage" />
+    </Tab>
+    <Tab Title="{xct:Translate Stats}" Icon="{x:StaticResource StatsIcon}" Route="StatsTab">
       <ShellContent Title="{xct:Translate Teams}" ContentTemplate="{DataTemplate views:TeamsPage}" Route="TeamsPage" />
       <ShellContent Title="{xct:Translate Stats}" ContentTemplate="{DataTemplate views:CompetitionStatisticsPage}" Route="CompetitionStatisticsPage" />
     </Tab>
+
     <ShellContent Title="{xct:Translate Settings}" ContentTemplate="{DataTemplate views:SettingsPage}" Icon="{x:StaticResource SettingsIcon}" />
+    <ShellContent
+      Title="CompetitionDetail"
+      ContentTemplate="{DataTemplate views:CompetitionDetailPage}"
+      Icon="{x:StaticResource SoccerIcon}"
+      Route="CompetitionDetailPage" />
     <!--<ShellContent Title="{xct:Translate Database}" ContentTemplate="{DataTemplate views:DatabasePage}" Icon="{x:StaticResource DatabaseIcon}" />-->
   </TabBar>
-
-  <!--
-    TODO Check if still needed: Invisible, sIf you would like to navigate to this content you can do so by calling
-    await Shell.Current.GoToAsync("//LoginPage");
-  -->
-  <ShellContent ContentTemplate="{DataTemplate views:NewCompetitionPage}" Route="NewCompetitionPage" />
-  <ShellContent ContentTemplate="{DataTemplate views:CompetitionDetailPage}" Route="CompetitionDetailPage" />
 </Shell>
