--- a/src/FantasyFootball.Maui/Views/CompetitionsPage.xaml
+++ b/src/FantasyFootball.Maui/Views/CompetitionsPage.xaml
@@ -3,7 +3,7 @@
   x:Class="FantasyFootball.Views.CompetitionsPage"
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-  xmlns:model="clr-namespace:FantasyFootball.Data"
+  xmlns:model="clr-namespace:FantasyFootball.Models;assembly=FantasyFootball"
   xmlns:vm="clr-namespace:FantasyFootball.ViewModels"
   xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
   x:Name="BrowseItemsPage"
@@ -11,29 +11,29 @@
   x:DataType="vm:CompetitionsViewModel">
   <StackLayout Padding="10,10,10,10">
     <!--  History of past competitions  -->
-    <CollectionView ItemsSource="{Binding CompetitionVms}" SelectionMode="Single">
+    <CollectionView ItemsSource="{Binding Competitions}" SelectionMode="Single">
       <CollectionView.ItemTemplate>
-        <DataTemplate x:DataType="vm:CompetitionDetailViewModel">
+        <DataTemplate x:DataType="model:Competition">
           <StackLayout>
             <StackLayout.GestureRecognizers>
-              <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CompetitionsViewModel}}, Path=OpenCompetitionCommand}" CommandParameter="{Binding CompetitionId}" />
+              <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CompetitionsViewModel}}, Path=OpenCompetitionCommand}" CommandParameter="{Binding Id}" />
             </StackLayout.GestureRecognizers>
             <StackLayout Padding="10" Orientation="Horizontal">
               <StackLayout>
                 <Label
                   FontSize="16"
                   LineBreakMode="NoWrap"
-                  Text="{Binding DisplayName}"
+                  Text="{Binding Name}"
                   VerticalOptions="Center" />
                 <Label
                   FontSize="12"
                   LineBreakMode="NoWrap"
-                  Text="{Binding Competition.Start, StringFormat='{0:t}'}"
+                  Text="{Binding Start, StringFormat='{0:t}'}"
                   VerticalOptions="Center" />
               </StackLayout>
               <Image WidthRequest="30" HeightRequest="30">
                 <Image.Source>
-                  <UriImageSource CacheValidity="10:00:00.0" Uri="{Binding Winner.Logo}" />
+                  <UriImageSource CacheValidity="10:00:00.0" Uri="{Binding LastGame.Winner.Logo}" />
                 </Image.Source>
                 <Image.Clip>
                   <EllipseGeometry Center="15,15" RadiusX="15" RadiusY="15" />
@@ -42,7 +42,7 @@
               <Label
                 FontSize="16"
                 LineBreakMode="NoWrap"
-                Text="{Binding Winner}"
+                Text="{Binding LastGame.Winner}"
                 VerticalOptions="Center" />
             </StackLayout>
             <!--  Separator  -->
