--- a/src/FantasyFootball.Maui/Resources/Styles.xaml
+++ b/src/FantasyFootball.Maui/Resources/Styles.xaml
@@ -4,7 +4,7 @@
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
   xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
-  xmlns:fonts="clr-namespace:FantasyFootball.Resources.Fonts">
+  xmlns:fonts="clr-namespace:FantasyFootball">
 
   <Color x:Key="Primary">#512BD4</Color>
   <Color x:Key="Light">#DFD8F7</Color>
