--- a/src/FantasyFootball.Maui/Resources/Styles.xaml
+++ b/src/FantasyFootball.Maui/Resources/Styles.xaml
@@ -43,17 +43,17 @@
   <FontImageSource
     x:Key="PlayIcon"
     FontFamily="MaterialIcons"
-    Glyph="{x:Static fonts:IconFont.Play_circle_filled}"
+    Glyph="{x:Static fonts:IconFont.Play_circle}"
     Color="Black" />
   <FontImageSource
     x:Key="ReplayIcon"
     FontFamily="MaterialIcons"
-    Glyph="{x:Static fonts:IconFont.Replay_circle_filled}"
+    Glyph="{x:Static fonts:IconFont.Replay}"
     Color="Black" />
   <FontImageSource
     x:Key="PauseIcon"
     FontFamily="MaterialIcons"
-    Glyph="{x:Static fonts:IconFont.Pause_circle_filled}"
+    Glyph="{x:Static fonts:IconFont.Pause_circle}"
     Color="Black" />
   <FontImageSource
     x:Key="ShuffleIcon"
