--- a/src/FantasyFootball.Maui/Views/GamesPage.xaml
+++ b/src/FantasyFootball.Maui/Views/GamesPage.xaml
@@ -16,32 +16,31 @@
         ItemDisplayBinding="{Binding Name}"
         ItemsSource="{Binding Rounds}"
         SelectedItem="{Binding SelectedRound, Mode=TwoWay}" />
-      <ScrollView VerticalOptions="FillAndExpand">
-        <CollectionView
-          x:Name="gamesCollection"
-          IsGrouped="True"
-          ItemSizingStrategy="MeasureAllItems"
-          ItemsSource="{Binding GamesByRound}"
-          VerticalOptions="Center">
-          <CollectionView.ItemsLayout>
-            <LinearItemsLayout ItemSpacing="5" Orientation="Vertical" />
-          </CollectionView.ItemsLayout>
-          <CollectionView.ItemTemplate>
-            <DataTemplate x:DataType="vm:GameViewModel">
-              <ctrls:GameViewRow BindingContext="{Binding .}" />
-            </DataTemplate>
-          </CollectionView.ItemTemplate>
-          <CollectionView.GroupHeaderTemplate>
-            <DataTemplate>
-              <Label
-                x:DataType="vm:RoundGroup"
-                BackgroundColor="LightGray"
-                FontAttributes="Bold"
-                Text="{Binding Name}" />
-            </DataTemplate>
-          </CollectionView.GroupHeaderTemplate>
-        </CollectionView>
-      </ScrollView>
+      <CollectionView
+        x:Name="gamesCollection"
+        HorizontalScrollBarVisibility="Always"
+        IsGrouped="True"
+        ItemSizingStrategy="MeasureAllItems"
+        ItemsSource="{Binding GamesByRound}"
+        VerticalOptions="FillAndExpand">
+        <CollectionView.ItemsLayout>
+          <LinearItemsLayout ItemSpacing="5" Orientation="Vertical" />
+        </CollectionView.ItemsLayout>
+        <CollectionView.ItemTemplate>
+          <DataTemplate x:DataType="vm:GameViewModel">
+            <ctrls:GameViewRow BindingContext="{Binding .}" />
+          </DataTemplate>
+        </CollectionView.ItemTemplate>
+        <CollectionView.GroupHeaderTemplate>
+          <DataTemplate>
+            <Label
+              x:DataType="vm:RoundGroup"
+              BackgroundColor="LightGray"
+              FontAttributes="Bold"
+              Text="{Binding Name}" />
+          </DataTemplate>
+        </CollectionView.GroupHeaderTemplate>
+      </CollectionView>
       <StackLayout Orientation="Horizontal">
         <ImageButton
           WidthRequest="40"
