--- a/src/FantasyFootball.Maui/Views/StandingsPage.xaml
+++ b/src/FantasyFootball.Maui/Views/StandingsPage.xaml
@@ -9,12 +9,8 @@
   Title="{Binding Title}"
   x:DataType="vm:StandingsViewModel">
   <ContentPage.Content>
-    <StackLayout Margin="0,0,0,10">
-      <Grid
-        Grid.Row="0"
-        RowDefinitions="30"
-        ColumnDefinitions="20,20,170,30,40,30,30,30"
-        BackgroundColor="White">
+    <StackLayout Margin="10">
+      <Grid Grid.Row="0" RowDefinitions="30" ColumnDefinitions="20,20,170,30,40,30,30,30">
         <Label
           Grid.Column="0"
           Grid.ColumnSpan="3"
@@ -27,11 +23,11 @@
         <Label Grid.Column="6" Text="{xct:Translate Points}" />
       </Grid>
       <CollectionView
+        VerticalOptions="FillAndExpand"
         HorizontalScrollBarVisibility="Always"
         IsGrouped="True"
         ItemSizingStrategy="MeasureAllItems"
-        ItemsSource="{Binding RecordsByGroup}"
-        VerticalOptions="FillAndExpand">
+        ItemsSource="{Binding RecordsByGroup}">
         <CollectionView.ItemsLayout>
           <LinearItemsLayout ItemSpacing="10" Orientation="Vertical" />
         </CollectionView.ItemsLayout>
@@ -39,6 +35,7 @@
           <DataTemplate>
             <Label
               x:DataType="vm:RecordsGroup"
+              BackgroundColor="LightGrey"
               FontAttributes="Bold"
               Text="{Binding Name}"
               TextTransform="Uppercase" />
@@ -51,17 +48,24 @@
               RowDefinitions="25"
               ColumnDefinitions="20,20,170,30,40,30,30,30"
               BackgroundColor="{Binding BgColor}">
-
-              <Label Grid.Column="0" FontAttributes="Bold" Text="{Binding Record.Position}" />
+              <Label
+                Grid.Column="0"
+                VerticalOptions="Center"
+                FontAttributes="Bold"
+                Text="{Binding Record.Position}" />
               <Image
                 Grid.Column="1"
                 WidthRequest="20"
                 HeightRequest="20"
+                VerticalOptions="Center"
                 Source="{Binding Record.Team.Logo}" />
-
-              <Label Grid.Column="2" Text="{Binding Record.Team.Name}" />
-              <Label Grid.Column="3" Text="{Binding Record.MatchesPlayed}" />
-              <Label Grid.Column="4">
+              <Label
+                Grid.Column="2"
+                Margin="10,0,0,0"
+                VerticalOptions="Center"
+                Text="{Binding Record.Team.Name}" />
+              <Label Grid.Column="3" VerticalOptions="Center" Text="{Binding Record.MatchesPlayed}" />
+              <Label Grid.Column="4" VerticalOptions="Center">
                 <Label.Text>
                   <MultiBinding StringFormat="{}{0}:{1}">
                     <Binding Path="Record.GoalsFor" />
@@ -69,8 +73,12 @@
                   </MultiBinding>
                 </Label.Text>
               </Label>
-              <Label Grid.Column="5" Text="{Binding Record.GoalDifference}" />
-              <Label Grid.Column="6" FontAttributes="Bold" Text="{Binding Record.Points}" />
+              <Label Grid.Column="5" VerticalOptions="Center" Text="{Binding Record.GoalDifference}" />
+              <Label
+                Grid.Column="6"
+                VerticalOptions="Center"
+                FontAttributes="Bold"
+                Text="{Binding Record.Points}" />
               <!--  Label Grid.Column="7" FontAttributes="Bold" Text="{Binding Record.AveragePointsPerGame}" /  -->
             </Grid>
           </DataTemplate>
