--- a/src/FantasyFootball.Maui/Resources/Styles.xaml
+++ b/src/FantasyFootball.Maui/Resources/Styles.xaml
@@ -6,10 +6,11 @@
   xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
   xmlns:fonts="clr-namespace:FantasyFootball">
 
-  <Color x:Key="Primary">#512BD4</Color>
+  <Color x:Key="Primary">#3E8EED</Color>
   <Color x:Key="Light">#DFD8F7</Color>
   <Color x:Key="Dark">#2B0B98</Color>
   <Color x:Key="White">White</Color>
+  <Color x:Key="WhiteAccent">WhiteSmoke</Color>
   <Color x:Key="Black">Black</Color>
   <Color x:Key="LightGray">#E5E5E1</Color>
   <Color x:Key="MidGray">#969696</Color>
@@ -468,7 +469,7 @@
 
   <Style ApplyToDerivedTypes="True" TargetType="Page">
     <Setter Property="Padding" Value="0" />
-    <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
+    <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource WhiteAccent}, Dark={StaticResource Black}}" />
   </Style>
 
   <Style x:Key="BaseStyle" TargetType="Element">
@@ -477,7 +478,7 @@
     <Setter Property="Shell.TitleColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
     <Setter Property="Shell.DisabledColor" Value="{AppThemeBinding Light={StaticResource LightGray}, Dark={StaticResource DarkGray}}" />
     <Setter Property="Shell.UnselectedColor" Value="{AppThemeBinding Light={StaticResource LightGray}, Dark={StaticResource DarkGray}}" />
-    <Setter Property="Shell.NavBarHasShadow" Value="False" />
+    <Setter Property="Shell.NavBarHasShadow" Value="True" />
     <Setter Property="Shell.TabBarBackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
     <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
     <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
