--- a/src/FantasyFootball.Maui/Views/CompetitionStatisticsPage.xaml
+++ b/src/FantasyFootball.Maui/Views/CompetitionStatisticsPage.xaml
@@ -12,7 +12,7 @@
         <Picker HorizontalOptions="FillAndExpand" ItemsSource="{Binding CompetitionTypes}" SelectedItem="{Binding SelectedCompetitionType}" />
       </StackLayout>
       <ScrollView Orientation="Both">
-        <CollectionView ItemSizingStrategy="MeasureAllItems" ItemsSource="{Binding Records}" VerticalOptions="Center">
+        <CollectionView VerticalOptions="Center" ItemSizingStrategy="MeasureAllItems" ItemsSource="{Binding Records}">
           <CollectionView.Header>
             <Grid
               Grid.Row="0"
@@ -25,10 +25,10 @@
                 FontAttributes="Bold"
                 Text="{Binding Title}"
                 TextTransform="Uppercase" />
-              <Label Grid.Column="3" Text="{xct:Translate Games}" />
+              <Label Grid.Column="3" Text="{xct:Translate GamesShort}" />
               <Label Grid.Column="4" Text="{xct:Translate Goals}" />
               <Label Grid.Column="5" Text="{xct:Translate GoalDifference}" />
-              <Label Grid.Column="6" Text="{xct:Translate Points}" />
+              <Label Grid.Column="6" Text="{xct:Translate PointsShort}" />
               <Label Grid.Column="7" Text="{xct:Translate PPG}" />
               <Label Grid.Column="8" Text="{xct:Translate Won}" />
             </Grid>
@@ -49,8 +49,8 @@
                   WidthRequest="80"
                   HeightRequest="80"
                   HorizontalOptions="Center"
-                  Source="{Binding Record.Team.Logo}"
-                  VerticalOptions="Center" />
+                  VerticalOptions="Center"
+                  Source="{Binding Record.Team.Logo}" />
                 <Label Grid.Column="2" Text="{Binding Record.Team.Name}" />
                 <Label Grid.Column="3" Text="{Binding Record.MatchesPlayed}" />
                 <Label Grid.Column="4">
